Added more components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<span><b>{{ title }}</b> is running!</span>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<div class="container">
+  <br>
+  <div class="alert alert-info">
+    <strong>{{ title }}</strong> is running!
+  </div>
+  <app-success></app-success>
+  <app-warning></app-warning>
+</div>
 
 
 
