--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <div class="container">
-  <br>
-  <div class="alert alert-info">
-    <strong>{{ title }}</strong> is running!
-  </div>
-  <app-success></app-success>
-  <app-warning></app-warning>
+  <p>Angular app is running</p>
 </div>
 
 
